tests/ui/common/observe_invalid_mode.stderr
error: unsupported interception mode; expected `Off`, `FirstHit`, or `EveryHit`
 --> tests/ui/common/observe_invalid_mode.rs:3:40
  |
3 | #[hook::observe(value = 1usize, mode = Sometimes)]
  |                                        ^^^^^^^^^
