tests/ui/common/observe_invalid_mode.rs
use retarget::hook;

#[hook::observe(value = 1usize, mode = Sometimes)]
unsafe extern "C" fn invalid_mode(value: i32) -> i32 {
    value
}

fn main() {}
